# ChangeLog for net-nds/ipa-client
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +ipa-client-1.2.1.ebuild, +metadata.xml:
  initial commit
