@@ -1,4 +1,6 @@
 DIST freeipa-1.2.1.tar.gz 534879 RMD160 1d64a27ab7cac9886acc2308cc34ae3baf040457 SHA1 73563220907ce716db808b3f9bf591a47f13b5ec SHA256 463bf57ea82e068e53dc3a6076594ab36f8ca8fe8eadd40964b4cd0026b0d1d0
+DIST freeipa-1.2.2.tar.gz 528651 RMD160 aadd3121f8ef986f14a588632ac35c2ed9273955 SHA1 85e0c65db5a9b1591dce83cd9a04dde54281686d SHA256 d3721e27069d16ae96715e40fdf8c6ca85d2b793884817061267db511e2d0749
 EBUILD ipa-client-1.2.1.ebuild 1015 RMD160 e2ac973b97309b4afc94c356765b790753745d14 SHA1 0a841f10a855ef5bfa38c8f9f2757d626595ba52 SHA256 ff13e7d906907ac95b2bd007222abbe7a6a6f52f40d5d845c4f3ae0d2c8cab79
-MISC ChangeLog 233 RMD160 3f591421b7864d1b0115082dcf35be3d39d1e772 SHA1 7ed7a236798f03b1d31c4a2d0e50f98877a64508 SHA256 050513544f01f873712e20481754bed2422ebb309601b5aadab26d9f0ded1b37
-MISC metadata.xml 447 RMD160 98c6a6a3a0098e91f316a41025c08ca6396c3940 SHA1 3186505e798fd6d05745b9cbb5a9f300e22e2b32 SHA256 850cf3d194a881e05fcd0c3303aee26a9f285e689583349662dc306d9806de54
+EBUILD ipa-client-1.2.2.ebuild 1261 RMD160 1d2548a4595fc9179c896a2933baa679317b1184 SHA1 e1e0503230f7d68dc7c789a4c1d460e42bca970e SHA256 53fcd3dff224698b0bbb73c164f7d5b8801a8b77b4faa04d24e77807b1a9931a
+MISC ChangeLog 343 RMD160 9a7f81cb9361b2feee4dd1e821973d9b7c87be9d SHA1 23c63f4727af7282eabc956618fa46a79b2d4322 SHA256 1382ec9a416e19935742fb7c698d359e9f8499f9e9dbadf172aa871b55eb7638
+MISC metadata.xml 448 RMD160 f2dce9b0b06383d1545d67b1704976de8d2dcf36 SHA1 53c4f94ad08b175fe1828e96fa4f78869ed51ef1 SHA256 73b494760e617fd4020b42fda398df008d5507c07aa149eb417925929fe04667
