@@ -8,6 +8,6 @@
 </maintainer>
 <!-- <longdescription>Long description of the package</longdescription> -->
 <use>
-  <flag name='openldap'>Use openldap, not 389 server</flag>
+  <flag name='openldap'>Use openldaps, not 389 server</flag>
 </use>
 </pkgmetadata>
